k8s/users-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
     labels:
       app: users-api
    spec:
      containers:
        - name: users-api
          image: straxseller/users-api:v0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
