k8s/users-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: users-api
